--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,7 +1,7 @@
     
-{% extends 'base.html' %}
-    {% load static %}
-    
+
+
+
 
         {% block content %} 
         <!DOCTYPE html>
@@ -16,12 +16,37 @@
             crossorigin="anonymous"
             ></script>
             <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
-            <link rel="stylesheet" href="{% static 'css/profile.css' %}" />
+            {% load static %}<link rel="stylesheet" href="{% static 'css/profile.css' %}" />
+
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
                 crossorigin="anonymous" />
-            <title>Document</title>
+            <title>Profile</title>
         </head>
-        <div class="profile"><img src="{% static 'img/profile.png' %}" /></div>
+        <body>
+            <!--nav-->
+            <div class="main">
+            <header>
+                <nav class="navigation">
+                <div class="WODlogo">
+                    
+                    <a href="/pages/home/"><h3><i style="color: red;">W</i><i style="color: yellow;">O</i><i style="color:blue ;">D</i></h3></a>
+                </div>
+
+                <div class="search_bar">
+                    <input type="text" placeholder="search" />
+                    <a class="search_bar" href=""><i class="fas fa-search"></i></a>
+                </div>
+
+                <div class="contacts_icons">
+                    <button class="program" onclick="location.href='../sport/';">Programs</button>
+                    <button class="stats" onclick= "location.href='../log/';">Logs</button>
+                    
+                </div>
+                </nav>
+                
+            <!--profile-->
+            
+        <div class="profile"><img src="{% static 'img/profile.png' %}" />
         <div class="detail">
             <div class="post">
             <h2>0</h2>
@@ -36,7 +61,7 @@
             <p>Following</p>
             </div>
         </div>
-        <br />
+        <br/>
         <div class="info">
             <div class="name">
             <h3>Bret Patterson</h3>
@@ -53,8 +78,9 @@
             
             </div>
         </div>
-        </div>
+    </div>
         
+    
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light shadow" id="mainNav">
             <div class="container-fluid">
@@ -66,19 +92,26 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item text-black">
-                            <a class="nav-link text-black font-weight-bold" href="#">About</a>
+                            <a class="nav-link text-black font-weight-bold" href="#"></a>
                         </li>
                         <li class="nav-item text-black">
-                            <a class="nav-link text-black font-weight-bold" href="#">Policy</a>
+                            <a class="nav-link text-black font-weight-bold" href="#"></a>
                         </li>
                         <li class="nav-item text-black">
-                            <a class="nav-link text-black font-weight-bold" href="#">Contact</a>
+                            <a class="nav-link text-black font-weight-bold" href="#"></a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-        
+        <!---->
+    
+    {% for post in posts %}
+        <p>{{post.author}}</p>
+        <p>{{post.caption}}</p>
+    {% endfor %}
+
+
 <div class="col-md-4 float-right ">
     <div class="card my-4">
             <h5 class="card-header">About Us</h5>
@@ -89,7 +122,8 @@
         </div>
     </div>
     </div>
-    
+</div>
+    {% endblock content %}
     </body>
     </html>
-    {% endblock content %}
+
