--- a/static/css/log.css
+++ b/static/css/log.css
@@ -1,5 +1,5 @@
 body{
-    background-color:rgb(145, 142, 142) ;
+    background-color:rgb(199, 198, 198);
 }
 header{
     background-color: rgb(216, 214, 214);
@@ -16,6 +16,7 @@ header{
     justify-content: space-between;
     flex-wrap: wrap;
     align-items: center;
+    border-bottom: solid 5px white;
 }
 .navigation a{
     color: aliceblue;
@@ -56,8 +57,8 @@ input{
     text-align: center;
     height:30px ;
     width:120px ;
-    margin-right: 50px;
-    padding-left: 40px;
+    margin-right: 25px;
+    padding-left: 25px;
     padding-right: 40px;
     border-radius: 5px;
     box-shadow: 5px 5px gray;
