--- a/templates/base.html
+++ b/templates/base.html
@@ -25,8 +25,9 @@
                 <div class="col-md-8 card mb-4  mt-3 left  top">
                     <div class="card-body">
                     <h1>{% block title %} {{ post.title }} {% endblock title %}</h1>
-                    <p class=" text-muted">{{ post.author }} | {{ post.created_on }}</p>
-                    <p class="card-text ">{{ post.content | safe }}</p>
+                    <textarea name="log" id="" cols="70" rows="10"></textarea>
+                    <!-- <p class=" text-muted">{{ post.author }} | {{ post.created_on }}</p> -->
+                    <!-- <p class="card-text ">{{ post.content | safe }}</p> -->
                     </div>
                 </div>
             
@@ -55,7 +56,9 @@
                         Your comment is awaiting moderation
                     </div>
                     {% else %}
-                    <h3>Leave a comment</h3>
+                    <h3>Leave a comment!</h3>
+                    {{test}}
+
                     <form method="post" style="margin-top: 1.3em;">
                         {{ comment_form.as_p }}
                         {% csrf_token %}
